welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: Unmatched closing brace '}' ignored here
                 	}
                        ^SlugTracking:40: error: Unmatched closing brace '}' ignored here
}
^